<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginPage"
    android:orientation="vertical"
    android:background="@color/custom_lightGrey"
    >

    <TextView
        android:layout_width="411dp"
        android:layout_height="57dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/loginLabel"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="208dp"
        android:layout_height="231dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/login" />


    <EditText
        android:id="@+id/phoneNbr"
        android:layout_width="282dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundshape"
        android:hint="@string/memHint"
        android:padding="15dp"
        android:textSize="18dp" />


    <EditText
        android:id="@+id/pass"
        android:layout_width="282dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="@drawable/roundshape"
        android:hint="@string/passHint"
        android:padding="15dp"
        android:textSize="18dp" />

    <Button
        android:id="@+id/build"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/loginbtn"
        android:text="@string/loginBtn"
        android:textColor="@color/white"
        android:textSize="17dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memloginText"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/add"
            android:textColor="@color/custom_orange"
            android:textSize="15dp"
            android:textStyle="bold"
            android:onClick="add"/>

    </LinearLayout>


</LinearLayout>
