<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createHome"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/buildinghouse" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Build Your House"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/custom_darkGrey"
        android:textSize="18dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical">
        <!--android:background="@color/custom_orangePastel1"-->

        <TextView
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:text="@string/homeName"
            android:textColor="@color/custom_darkGrey"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundrectext"
            android:paddingLeft="15dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textSize="16dp" />


        <TextView
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/pass"
            android:textColor="@color/custom_darkGrey"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundrectext"
            android:paddingLeft="15dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textSize="16dp" />

        <TextView
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/confirm"
            android:textColor="@color/custom_darkGrey"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/conPass"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundrectext"
            android:paddingLeft="15dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textSize="16dp" />

        <TextView
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/custom_darkGrey"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundrectext"
            android:paddingLeft="15dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textSize="16dp"
            android:inputType="textEmailAddress"/>



    </LinearLayout>

    <Button
        android:layout_width="105dp"
        android:layout_height="37dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundrec"
        android:text="@string/build"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:onClick="build"/>



</LinearLayout>