<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".security"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/toolbar"/>

    <ImageView
        android:layout_width="233dp"
        android:layout_height="156dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/eye" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/security"
        android:textColor="@color/custom_darkGrey"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/pastelroundbackground"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="57dp"
            android:layout_height="44dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="14dp"
            android:src="@drawable/sqcamera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/whoHouse"
            android:textColor="@color/custom_darkGrey"
            android:textSize="20dp"
            android:textStyle="normal" />


    </LinearLayout>

    <Button
        android:id="@+id/check"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/securitybtn"
        android:text="check"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/pastelroundbackground"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="68dp"
            android:layout_height="46dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/smartdoor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="20dp"
            android:text="@string/doorStat"
            android:textColor="@color/custom_darkGrey"
            android:textSize="20dp"
            android:textStyle="normal" />

    </LinearLayout>

    <!--<TextView
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/orangetextoutline"
        android:paddingLeft="22dp"
        android:paddingTop="10dp"
        android:text="closed"
        android:textColor="@color/custom_darkGrey"
        android:textSize="18dp"
        android:textStyle="bold" />-->


    <ImageView
        android:id="@+id/open"
        android:layout_width="72dp"
        android:layout_height="91dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/opendoor"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/closed"
        android:layout_width="85dp"
        android:layout_height="103dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="-0dp"
        android:src="@drawable/closeddoor"
        android:visibility="visible"/>

</LinearLayout>